docs/1.5/modules/en/nav.adoc
* xref:index.adoc[Overview]
* Quickstarts
** xref:quickstart-ui.adoc[SUSE® Rancher Prime OS Manager the visual way]
** xref:quickstart-cli.adoc[SUSE® Rancher Prime OS Manager the command line way]
* Rancher OS Management
** xref:architecture.adoc[Architecture]
*** xref:architecture-components.adoc[SUSE® Rancher Prime OS Manager Components]
*** xref:custom-resources.adoc[Custom Resources]
*** xref:architecture-services.adoc[Services]
**** xref:architecture-machineonboarding.adoc[Machine onboarding]
**** xref:architecture-clusterdeployment.adoc[Kubernetes cluster provisioning]
** xref:authentication.adoc[Authentication]
** xref:plans.adoc[Plans]
** xref:upgrade-lifecycle.adoc[Upgrade lifecycle]
* Installation
** xref:installation.adoc[Installation]
** xref:custom-install.adoc[Customize installation]
** xref:hostname.adoc[Customize hostname]
** xref:networking-vlans.adoc[Configure VLANs]
** xref:wifi.adoc[Configure WiFi]
** xref:ntp.adoc[Configure NTP]
** xref:removable-device-cloudconfig.adoc[Include cloud-config from removable devices]
** xref:custom-certificate.adoc[Add custom certificates]
* Node operational tasks
** xref:upgrade.adoc[Upgrade]
** xref:reset.adoc[Machine reset]
** xref:behind-proxy.adoc[Behind a proxy configuration]
** xref:rancher-vmware.adoc[Using Elemental with Rancher and VMware]
* Operator operational tasks
** xref:backup.adoc[Backup]
** xref:restore.adoc[Restore]
** xref:airgap.adoc[Airgap install]
** xref:networking.adoc[Networking]
*** xref:networking-vlans.adoc[Configure a VLAN]
*** xref:wifi.adoc[Configure Wi-Fi]
** xref:custom-images.adoc[Build Custom OS Images]
** xref:unmanaged-os.adoc[Register an Unmanaged OS]
** xref:tpm.adoc[ Trusted Platform Module (TPM)]
* Troubleshooting
** xref:troubleshooting-support.adoc[Support]
** xref:troubleshooting-restore.adoc[Restore]
** xref:troubleshooting-upgrade.adoc[Upgrade]
** xref:troubleshooting-rancher-upgrades.adoc[Rancher upgrades]
** xref:troubleshooting-reset.adoc[Reset]
* References
** xref:cloud-config-reference.adoc[Cloud-config]
** xref:machineregistration-reference.adoc[MachineRegistration]
** xref:machineinventory-reference.adoc[MachineInventory]
** xref:machineinventoryselector-reference.adoc[MachineInventorySelector]
** xref:machineinventoryselectortemplate-reference.adoc[MachineInventorySelectorTemplate]
** xref:managedosimage-reference.adoc[ManagedOSImage]
** xref:managedosversionchannel-reference.adoc[ManagedOSVersionChannel]
** xref:managedosversion-reference.adoc[ManagedOSVersion]
** xref:seedimage-reference.adoc[SeedImage]
** xref:cluster-reference.adoc[Cluster]
** xref:operatorchart-reference.adoc[SUSE® Rancher Prime OS Manager Operator Helm chart]
** xref:kubernetesversions.adoc[Kubernetes versions]
** xref:smbios.adoc[Smbios]
** xref:hardwarelabels.adoc[Hardware labels]
** xref:inventory-management.adoc[Inventory management]
* xref:release-notes.adoc[Release notes]